--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
@@ -141,7 +141,7 @@ footer {
             }
 
             &.fa-arrow-up:hover {
-                color: $orange-red;
+                color: $theme-color;
             }
 
             &.fa-circle {
