--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
@@ -6,6 +6,14 @@ $fa-font-path: "../fonts" !default;
 // flag icons location in relation to target location of the css file.
 $flag-icon-css-path: "../fonts/flags/" !default;
 
+$theme-color: #ff2b00 !default;
+$theme-color-hover: #b62205 !default;
+$grey-11: #c1c6c8 !default;
+$grey-12: #333f48 !default;
+$grey-13: #444 !default;
+$grey-14: #666 !default;
+$grey-15: #5b6770 !default;
+$font-family-base: "Open Sans", sans-serif !default;
 $white: #fff !default;
 $black: #000 !default;
 $blue: #0070d2 !default;
