--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/experience/components/commerceAssets/shopTheLook.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/experience/components/commerceAssets/shopTheLook.scss
@@ -51,6 +51,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        color: $theme-color;
 
         @include media-breakpoint-up(sm) {
             color: $shop-the-look-text-color;
