--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/search.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/search.scss
@@ -86,8 +86,12 @@
 
             button {
                 border: none;
-                color: $blue;
+                color: $black;
                 background-color: transparent;
+
+                i {
+                    color: $theme-color;
+                }
             }
         }
     }
