--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/checkout/checkout.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/checkout/checkout.scss
@@ -26,7 +26,7 @@ $checkout-font-weight: 600;
 .edit-button,
 .btn-show-details,
 .btn-add-new {
-    color: $primary;
+    color: $theme-color;
     float: right;
     cursor: pointer;
 
