--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_common.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_common.scss
@@ -13,8 +13,22 @@ input[placeholder] {
     text-overflow: ellipsis;
 }
 
+.btn-primary {
+    background-color: $theme-color;
+}
+
+.btn-primary:hover {
+    background-color: $theme-color-hover;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 header ~ #maincontent .container a:not(.btn-primary, .btn-outline-primary) {
-    color: $blue;
+    color: $theme-color;
 }
 
 .hide-order-discount {
