--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_header.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_header.scss
@@ -109,7 +109,7 @@ $menu-item-margin: 0.625em;
             color: $white;
             width: 100%;
             height: 100%;
-            background-color: $primary;
+            background-color: $theme-color;
         }
     }
 
@@ -135,7 +135,7 @@ $menu-item-margin: 0.625em;
     }
 
     .minicart-quantity {
-        background-color: $primary;
+        background-color: $theme-color;
         border-radius: 50%;
         width: 1.25em; /* 20/16 */
         height: 1.25em; /* 20/16 */
@@ -151,7 +151,7 @@ $menu-item-margin: 0.625em;
 }
 
 a.normal {
-    color: $primary;
+    color: $theme-color;
     text-decoration: underline;
 }
 
@@ -185,8 +185,8 @@ a.normal {
 }
 
 .valid-cookie-warning {
-    background-color: $blue;
-    color: $white;
+    background-color: $grey-12;
+    color: $theme-color;
     white-space: nowrap;
 
     p {
