--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
@@ -14,6 +14,7 @@ $grey-13: #444 !default;
 $grey-14: #666 !default;
 $grey-15: #5b6770 !default;
 $font-family-base: "Open Sans", sans-serif !default;
+$font-family-base-2: "GTAmericaCondensedBold", sans-serif !default;
 $white: #fff !default;
 $black: #000 !default;
 $blue: #0070d2 !default;
