--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_menu.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_menu.scss
@@ -123,7 +123,7 @@ $slide-out-animation: left 0.5s cubic-bezier(0, 1, 0.5, 1);
                     }
 
                     a {
-                        font-family: "GTAmericaCondensedBold", sans-serif;
+                        font-family: $font-family-base-2;
                         color: $grey-15;
                         font-size: 0.85rem;
                         cursor: pointer;
@@ -132,7 +132,7 @@ $slide-out-animation: left 0.5s cubic-bezier(0, 1, 0.5, 1);
                     }
 
                     a:hover {
-                        color: $orange-red;
+                        color: $theme-color;
                     }
                 }
             }
