Cart and Minicart Changes

--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_miniCart.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_miniCart.scss
@@ -17,7 +17,7 @@
     }
 
     .remove-btn {
-        color: $slightly-darker-gray;
+        color: $slightly-darker-gray-minicart;
         float: right;
         background-color: white;
         border: none;
