--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_header.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_header.scss
@@ -86,7 +86,11 @@ $menu-item-margin: 0.625em;
 }
 
 .main-menu {
-    background-color: $dark-gray;
+    background-color: $white;
+    width: 100%;
+    height: 160px;
+    margin: 0;
+    padding: 0;
 
     .navbar .close-menu button,
     .navbar .close-button button {
@@ -109,7 +113,7 @@ $menu-item-margin: 0.625em;
             color: $white;
             width: 100%;
             height: 100%;
-            background-color: $primary;
+            background-color: $theme-color;
         }
     }
 
@@ -135,7 +139,7 @@ $menu-item-margin: 0.625em;
     }
 
     .minicart-quantity {
-        background-color: $primary;
+        background-color: $theme-color;
         border-radius: 50%;
         width: 1.25em; /* 20/16 */
         height: 1.25em; /* 20/16 */
@@ -151,7 +155,7 @@ $menu-item-margin: 0.625em;
 }
 
 a.normal {
-    color: $primary;
+    color: $theme-color;
     text-decoration: underline;
 }
 
@@ -185,7 +189,7 @@ a.normal {
 }
 
 .valid-cookie-warning {
-    background-color: $blue;
+    background-color: $theme-color;
     color: $white;
     white-space: nowrap;
 
