Cart and Minicart Changes

--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/_variables.scss
@@ -6,6 +6,7 @@ $fa-font-path: "../fonts" !default;
 // flag icons location in relation to target location of the css file.
 $flag-icon-css-path: "../fonts/flags/" !default;
 
+$slightly-darker-gray-minicart: $theme-color !default;
 $theme-color: #ff2b00 !default;
 $theme-color-hover: #b62205 !default;
 $grey-11: #c1c6c8 !default;
