--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
@@ -31,12 +31,11 @@ footer {
     }
 
     .footer-container .footer-item.collapsible-xs button {
-        font-family: 'Dosis', sans-serif;
+        font-family: "Dosis", sans-serif;
         padding: 0;
     }
 
     .social-links {
-
         @include clearfix;
 
         @include media-breakpoint-down(xs) {
@@ -65,7 +64,6 @@ footer {
     }
 
     .store {
-
         @include media-breakpoint-down(xs) {
             border-bottom: 1px solid $dark-gray;
 
@@ -122,7 +120,6 @@ footer {
 }
 
 .footer-item {
-
     @include media-breakpoint-down(xs) {
         border-bottom: 1px solid $dark-gray;
     }
@@ -142,4 +139,60 @@ footer {
 
 .email-signup-alert {
     @include toast-alert();
+}
+
+.checkout-footercontent {
+    .container {
+        .checkout-footer-container {
+            .checkout-footer-item {
+                a:hover {
+                    color: $theme-color;
+                }
+
+                a,
+                span {
+                    font-family: $font-family-base;
+                    font-size: 0.73rem;
+                    font-weight: 358;
+                    color: $grey-11;
+                    text-decoration: none;
+                    cursor: pointer;
+                    list-style: none;
+                }
+
+                span {
+                    cursor: default;
+                }
+
+                display: inline;
+                margin-left: 1.8em;
+            }
+
+            margin: 0;
+            padding: 0;
+        }
+    }
+
+    background-color: $checkoutFooter;
+    padding: 1em;
+    margin-top: 5em;
+}
+
+@media only screen and (max-width: $mobile-breakpoint) {
+    .checkout-footercontent {
+        margin-top: 0;
+        margin-bottom: 5em;
+
+        .container {
+            .checkout-footer-container {
+                .checkout-footer-item {
+                    display: block;
+
+                    span {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
