--- a/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
+++ b/storefront-reference-architecture-master/cartridges/org_trane/cartridge/client/default/scss/components/_footer.scss
@@ -154,7 +154,7 @@ footer {
                     font-family: $font-family-base;
                     font-size: 0.73rem;
                     font-weight: 358;
-                    color: $grey-11;
+                    color: $grey4;
                     text-decoration: none;
                     cursor: pointer;
                     list-style: none;
@@ -173,7 +173,7 @@ footer {
         }
     }
 
-    background-color: $checkoutFooter;
+    background-color: $grey8;
     padding: 1em;
     margin-top: 5em;
 }
